[project]
name = "bitwarden-to-apple"
version = "0.1.0"
description = ""
authors = [
    {name = "Roberto Conte Rosito",email = "roberto.conterosito@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
